<resources>
    <string name="app_name">Traffic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Forgalomszámlálás</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lane">Sáv kiválasztása</string>
    <string name="juction_type">Csomópont típusa</string>
    <string name="junction_name">Csomópont neve</string>
    <string name="car">Autó</string>
    <string name="truck">Teherautó</string>
    <string name="bus">Busz</string>
</resources>
