<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <TextView
        android:id="@+id/junctionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/measurement_marginTextView"
        android:layout_marginBottom="@dimen/measurement_marginButton"
        android:text="@string/junction_name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLine"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/measurement_marginTextView"
            android:text="@string/lane"
            android:textSize="18sp"
            android:textColor="@color/button"/>

        <Spinner
            android:id="@+id/laneID"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/measurement_marginTextView"
            android:popupBackground="@color/text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvJunctionType"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/measurement_marginTextView"
            android:layout_marginBottom="@dimen/measurement_marginButton"
            android:text="@string/juction_type"
            android:textSize="18sp"
            android:textColor="@color/button"/>

        <Spinner
            android:id="@+id/junctionType"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginRight="@dimen/measurement_marginTextView"
            android:popupBackground="@color/text"/>

    </LinearLayout>

    <Button
        android:id="@+id/carButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/car"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:background="@color/button"/>

    <Button
        android:id="@+id/truckButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/measurement_marginButton"
        android:layout_marginBottom="@dimen/measurement_marginButton"
        android:text="@string/trunk"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:background="@color/button"/>

    <Button
        android:id="@+id/busButton"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:text="@string/bus"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:background="@color/button"/>

</LinearLayout>